prevent horizontal scroll

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 @font-face { font-family: "Proxima Nova Bold"; src: url('/fonts/ProximaNovaBold.otf') format("opentype"); }
 @font-face { font-family: "Proxima Nova Regular"; src: url('/fonts/ProximaNovaRegular.otf') format("opentype"); }
 
